<resources>
    <string name="app_name">Ymibus</string>
    <string name="nombreapp">¿Y mi bus?</string>
    <string name="user">Usuario</string>
    <string name="driver">Conductor</string>
    <string name="aranjuez">Aranjuez</string>
    <string name="integrado">Integrado</string>
    <string name="title_activity_aranjuez">Map</string>
    <string name="userhint">Correo electrónico</string>
    <string name="passwordhint">Contraseña</string>
    <string name="signin">Ingresar</string>
    <string name="register"><u>Registrarse</u></string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="phone">Celular</string>
    <string name="email">Correo</string>
    <string name="confirmpassword">Confirmar contraseña</string>
    <string name="edwin">Edwin Andrés Cubillos Vega</string>
    <string name="alejandro">Alejandro Marín Londoño</string>
    <string name="deisy">Deisy Mariana Velásquez Grajales</string>
    <string name="yerina">Yerina Candelaria Avilez Palencia</string>
    <string name="pablo">Juan Pablo Gutierrez</string>
    <string name="jian">Jian Carlo Gallego Mejia</string>
    <string name="logout">Cerrar sesión</string>

</resources>
