<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity"
    android:orientation="vertical"
    android:background="@color/backgroundcolor">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/yerina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/edwin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/jian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/pablo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/alejandro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/deisy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>



</LinearLayout>